<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">TourismApplication</string>
    <string name="MainMenu_Support">Support</string>
    <string name="MainMenu_Singin">Login</string>
    <string name="MainMenu_MainPage">Home</string>
    <string name="MainMenu_Favorite">Favorite</string>
    <string name="MainMenu_AboutUs">About Us</string>
    <string name="MainMenu_Profile">Profile</string>
    <string name="Menu_Hotel">Hotel</string>
    <string name="Menu_Airpalane">Airpalane</string>
    <string name="Menu_bus">Bus</string>
    <string name="Menu_Train">Train</string>
    <string name="Menu_Scenery">Scenery</string>
    <string name="title_activity_side_menu">side_menu</string>
    <string name="counter_plus">+</string>
    <string name="counter_minus">-</string>
    <string name="hotel_city">City Name</string>
    <string name="hotel_date">Date Entry</string>
    <string name="hotel_night">Night</string>
    <string name="search">Search</string>
    <string name="oneway">One Way</string>
    <string name="twoway">Tow Way</string>
    <string name="goon">Go On</string>
    <string name="returndate">Return Date</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="baby">Baby</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="enter">Enter</string>
    <string name="guest">Guest</string>
    <string name="register">Register</string>
    <string name="Veteran">Veteran</string>
    <string name="Compartment">Compartment</string>
    <string name="Sex">Sex</string>
    <string name="State">State</string>
    <string name="Frome">Frome</string>
    <string name="To">To</string>
    <string name="Terminal">Terminal</string>
    <string name="City">City</string>
    <string name="date">Date</string>
    <string name="Count">Count</string>

    <string name="name">Name</string>
    <string name="family">Family</string>
    <string name="cellphone">Cell Phone</string>

    <string name="user">User Name</string>
    <string name="pass">Password</string>
    <string name="NearME">Near Me</string>
    <string name="ByCity">By City</string>
    <string name="Offer">Offer</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FromCity">Source City</string>
    <string name="Arrival_Date">Arrival Date</string>
    <string name="ToCity">Destination City</string>
    <string name="Adult">Adults</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyBJ8TFPVVMhMo5HlkksRxexoGthfSabYEY</string>


</resources>
