<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"

        android:orientation="vertical">

        <Button
           android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/support_btn_mainmenu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/MainMenu_Support"
            android:textColor="@color/colorText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"

        android:orientation="vertical">

        <Button
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/favorite_btn_mainmenu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/MainMenu_Favorite"
            android:textColor="@color/colorText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"

        android:orientation="vertical">

        <Button
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/mainpage_btn_mainmenu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/MainMenu_MainPage"
            android:textColor="@color/colorText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"

        android:orientation="vertical">

        <Button
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/singin_btn_mainmenu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/MainMenu_Singin"
            android:textColor="@color/colorText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"

        android:orientation="vertical">

        <Button
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/aboutus_btn_mainmenu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/MainMenu_AboutUs"
            android:textColor="@color/colorText" />
    </LinearLayout>

</LinearLayout>