<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hotel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:background="@drawable/back">


    <LinearLayout

        android:id="@+id/LinearLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/train" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Menu_Train"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

    </LinearLayout>
<LinearLayout
    android:id="@+id/LinearTrainWays"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/RadioTrainWays"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RadioButton
    android:text="One Way"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/RadioTrainOneWay"/>
        <RadioButton
            android:text="Two Way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RadioTrainTwoWay"/>

    </RadioGroup>
</LinearLayout>
    <LinearLayout
        android:id="@+id/LinearCitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LinearLogo"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/FromCity"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <Spinner
            android:layout_margin="5dp"
            android:id="@+id/SpinnerFromCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/drop"
            android:spinnerMode="dialog" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearCitySpinnerTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LinearLogo"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ToCity"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <Spinner
            android:layout_margin="5dp"
            android:id="@+id/SpinnerToCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"


            android:background="@drawable/drop"
            android:spinnerMode="dialog" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LinearCitySpinner"
        android:layout_weight="1"

        android:orientation="horizontal">


        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Arrival_Date"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/hotel_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/edit_texts"
            android:gravity="center" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LinearCitySpinner"
        android:layout_weight="1"

        android:orientation="horizontal">


        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/returndate"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/Txt_ReturnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/edit_texts"
            android:gravity="center" />


    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"

    android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/Adult"
        android:textColor="@color/colorText"
        android:textSize="20sp" />


    <include layout="@layout/counter_layout" />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/child"
            android:textColor="@color/colorText"
            android:textSize="20sp" />


        <include layout="@layout/counter_layout" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button

            android:layout_margin="20dp"
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"

            android:background="@drawable/buttons_back"
            android:text="@string/search"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>