<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/hotel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/hotel"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Hotel"
            android:textColor="@color/colorText"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
    android:layout_marginTop="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


        <Spinner
            android:id="@+id/cityName"
            android:layout_marginLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content">

        </Spinner>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_city"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"/>

</LinearLayout>


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:id="@+id/hotel_date"
            android:background="@drawable/edit_texts"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_date"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<LinearLayout
    android:layout_marginTop="15dp"
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <include layout="@layout/counter_layout"/>
</LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_night"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginLeft="60dp"/>

    </LinearLayout>

<Button
    android:id="@+id/search_btn"
    android:text="@string/search"
    android:textAlignment="textEnd"
    android:layout_gravity="end"
    android:layout_marginRight="20dp"
    android:layout_width="90dp"
    android:layout_height="30dp"
    android:background="@drawable/search_button"/>
</LinearLayout>