<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_margin="25dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/airplane_btn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Menu_Airpalane"
                android:textColor="@color/colorText" />
        </LinearLayout>


        <LinearLayout
            android:layout_margin="25dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bus_btn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Menu_bus"
                android:textColor="@color/colorText" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_margin="25dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/hotel_btn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Menu_Hotel"
                android:textColor="@color/colorText" />
        </LinearLayout>


        <LinearLayout
            android:layout_margin="25dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/train_btn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Menu_Train"
                android:textColor="@color/colorText" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>



