<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hotel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <LinearLayout
        android:id="@+id/LinearLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_ir"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/ir_btn" />

        <Button
            android:id="@+id/btn_en"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/en_btn" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/LinearUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_texts"
            android:gravity="center" />


    </LinearLayout>


    <LinearLayout

        android:id="@+id/LinearPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/pass"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_texts"
            android:gravity="center" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/enter_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"

            android:background="@drawable/buttons_back"
            android:text="@string/enter"
            android:textAlignment="center" />


        <Button
            android:id="@+id/guest_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"

            android:background="@drawable/buttons_back"
            android:text="@string/guest"
            android:textAlignment="center" />


        <Button
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"

            android:background="@drawable/buttons_back"
            android:text="@string/register"
            android:textAlignment="center" />


    </LinearLayout>

</LinearLayout>